--- a/composer.json
+++ b/composer.json
@@ -29,9 +29,18 @@
 		"issues": "https://github.com/figtree-php/cli/issues",
 		"wiki": "https://github.com/figtree-php/cli/wiki"
 	},
-	"autoload": {},
-	"require": {
-		"php": "^8.0"
+	"autoload": {
+		"psr-4": {
+			"FigTree\\CLI\\": "src/",
+			"FigTree\\CLI\\Tests\\": "tests/"
+		}
 	},
-	"require-dev": {}
+	"require": {
+		"php": "^8.0",
+		"league/climate": "^3.7"
+	},
+	"require-dev": {
+		"squizlabs/php_codesniffer": "^3.6",
+		"phpunit/phpunit": "^9.5"
+	}
 }
